--- a/tiendaTechClase/src/main/resources/templates/consultas/listado.html
+++ b/tiendaTechClase/src/main/resources/templates/consultas/listado.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <!-- Esta es la página principal del sitio web TechShop -->
 <html>
     <head th:replace="~{general/fragmentos :: head}"/>
